# 3d-hydro-UrQMD

./: .gitignore  .gitmodules  README.rst  makepkg
condor/: job-control  job-control2  submit
models/: calc_dndy.py  preprocessing.py  run-avg.py  run-ebe  run-ebe.py  run-events  run.py
models/collector/: .calc_obs.py.swp  CMakeLists.txt  calc_obs.py  run_python
models/collector/data-folder/: data.hdf5
models/collector/src/: CMakeLists.txt  cdata.cpp  cdata.h  fwd.h  main.cpp
models/design/: CMakeLists.txt  script.py
models/escape5/: CMakeLists.txt
models/escape5/Tb/: dky3.mar-bug.data  dky3.mar.data  ptl3.data  ptl3_fev.data
models/escape5/cmake/Modules/: FindROOT.cmake~
models/escape5/src.visc/: CMakeLists.txt  DatabasePDG2.cpp  DatabasePDG2.h  DecayChannel.cpp  ParticlePDG2.cpp  ParticlePDG2.h  UKUtility.cpp  UKUtility.h  cascade.cpp  cascade.h  const.h  gen.cpp  gen.cpp~  gen.h  gen.h~  main.cpp  params.cpp  params.h  particle.cpp  particle.h  tree.cpp  tree.h
models/escape5/src.visc/UKW/: Makefile  README  a.f  aaa.h  addpart.f  alpharanf.f  angdis.f  anndec.f  anndec.f.orig  baryons.patch  blockres.f  boxprg.f  cascinit.f  colltab.f  colltab.f~  coload.f  comres.f  dectim.f  dwidth.f  fig1.eps  getmass.f  getspin.f  init.f  iso.f  ityp2pdg.f  jdecay2.f  main.cxx  mainf.1.f  mainf.f  make22.f  output.f  proppot.f  scatter.f  string.f  ukw.1.f  ukw.2.f  ukw.f  upmerge.f  uuu.data
models/trento3d/: CMakeLists.txt
models/trento3d/src/: CMakeLists.txt  event.cxx  event.h  output.cxx  trento.cxx
models/vhlle/: CMakeLists.txt
models/vhlle/back-up/: Makefile  hlle_visc
models/vhlle/back-up/src/: CMakeLists.txt  CMakeLists.txt~  cll.cpp~  eos.cpp  eos.cpp~  eos.h~  eos_hotqcd.cpp~  eos_hotqcd.h  eos_hotqcd.h~  fast.cpp  fast.cpp~  fast.h~  fld.cpp~  hdo.cpp~  main.cpp~  mcgstream.cpp~  mcgstream.h  rmn.cpp~  trancoeff.cpp  trancoeff.cpp~
models/vhlle/cmake/Modules/: FindROOT.cmake
models/vhlle/src/: CMakeLists.txt  IC_reader.cpp  IC_reader.h  cll.cpp  cll.h  eos.h  eos_hotqcd.cpp  eos_hotqcd.h  fast.h  fld.cpp  fld.h  hdo.cpp  hdo.cpp-bk  main.cpp  mcgstream.cpp  rmn.cpp  trancoeff.cpp  trancoeff.h
